Upgrade to Shadow 5.2.0, Checkstyle 8.26, Hamcrest 2.2, JMH 1.22, and address warning when building on Java 11.